--- a/app/src/main/res/layout/layout_person_avatar.xml
+++ b/app/src/main/res/layout/layout_person_avatar.xml
@@ -9,11 +9,12 @@
             type="String" />
     </data>
 
-    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/cardView"
         android:layout_width="80dp"
+        android:elevation="4dp"
         android:layout_height="80dp"
         app:cardCornerRadius="50dp">
 
@@ -25,5 +26,5 @@
             android:scaleType="centerCrop"
             app:imageUrlAvatar="@{path}"
             tools:src="@tools:sample/avatars" />
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 </layout>
