--- a/app/src/main/res/layout/list_item_media_long.xml
+++ b/app/src/main/res/layout/list_item_media_long.xml
@@ -8,11 +8,12 @@
             type="com.example.cinemates.domain.model.Media" />
     </data>
 
-    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="182dp"
+        android:elevation="4dp"
         app:cardBackgroundColor="@android:color/transparent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -95,15 +96,15 @@
 
                 <ImageView
                     android:id="@+id/iconAddWatchlist"
-                    android:layout_width="42dp"
-                    android:layout_height="42dp"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
                     android:src="@drawable/bookmark_icon"
                     app:tint="@color/item_state_color" />
 
                 <ImageView
                     android:id="@+id/iconAddWatched"
-                    android:layout_width="42dp"
-                    android:layout_height="42dp"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
                     android:src="@drawable/ic_seen_icon"
                     app:tint="@color/item_state_color" />
             </androidx.appcompat.widget.LinearLayoutCompat>
@@ -121,5 +122,5 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 </layout>
