--- a/app/src/main/res/layout/list_item_person_long.xml
+++ b/app/src/main/res/layout/list_item_person_long.xml
@@ -12,9 +12,10 @@
     </data>
 
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:elevation="4dp"
         app:cardBackgroundColor="@color/mirage_100">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -56,5 +57,5 @@
                 app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                 tools:text="@tools:sample/full_names" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 </layout>
