--- a/app/src/main/res/layout/list_item_section_collassable.xml
+++ b/app/src/main/res/layout/list_item_section_collassable.xml
@@ -23,7 +23,7 @@
 
             <TextView
                 android:id="@+id/titleTextView"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textSize="24sp"
