--- a/app/src/main/res/layout/fragment_episode_group_details.xml
+++ b/app/src/main/res/layout/fragment_episode_group_details.xml
@@ -24,15 +24,29 @@
             app:navigationIcon="@drawable/ic_outline_arrow_back_24"
             app:title="@{episodeGroup.name}" />
 
+        <com.indisparte.linearlayoutinfo.LinearInfoView
+            android:id="@+id/episode_group_description"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            app:hideIfValueEmpty="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            app:title="Description"
+            app:value="@{episodeGroup.description}" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/list_item_episode_long"
             android:orientation="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/episode_group_description"
+            tools:listitem="@layout/list_item_episode_long" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
