Fix about design

--- a/app/src/main/res/layout/fragment_tv_about.xml
+++ b/app/src/main/res/layout/fragment_tv_about.xml
@@ -65,24 +65,12 @@
                 android:layout_below="@id/textTitleGenres"
                 android:padding="10dp" />
 
-            <TextView
-                android:id="@+id/textTitleInfo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/chipGroupGenres"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:text="Info"
-                android:textColor="@color/alabaster"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
             <include
                 android:id="@+id/tv_info"
                 layout="@layout/layout_tv_info"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/textTitleInfo"
+                android:layout_below="@id/chipGroupGenres"
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="10dp"
                 app:tv="@{tv}" />
@@ -122,46 +110,13 @@
                 android:textStyle="bold" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/trailers"
+                android:id="@+id/tv_trailers"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/trailer_title"
                 android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:listitem="@layout/list_item_yt_video" />
-
-            <TextView
-                android:id="@+id/media_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/trailers"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="20dp"
-                android:text="Media"
-                android:textColor="@color/alabaster"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/media_title"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal">
-
-                <include
-                    android:id="@+id/posters_shower"
-                    layout="@layout/list_item_poster"
-                    app:counter="@{poster_counter}"
-                    app:path="@{tv.posterPath}" />
-
-                <include
-                    android:id="@+id/backdrops_shower"
-                    layout="@layout/list_item_backdrop"
-                    app:counter="@{backdrop_counter}"
-                    app:path="@{tv.backdropPath}" />
-
-            </androidx.appcompat.widget.LinearLayoutCompat>
 
 
         </RelativeLayout>
