--- a/app/src/main/res/layout/list_item_cast_long.xml
+++ b/app/src/main/res/layout/list_item_cast_long.xml
@@ -7,8 +7,8 @@
     <data>
 
         <variable
-            name="person"
-            type="com.example.cinemates.domain.model.Person" />
+            name="actor"
+            type="com.example.cinemates.domain.model.Cast" />
     </data>
 
 
@@ -25,7 +25,7 @@
 
             <include
                 layout="@layout/layout_person_avatar"
-                app:path="@{person.profilePath}" />
+                app:path="@{actor.profilePath}" />
 
             <TextView
                 android:id="@+id/tvTitle"
@@ -33,16 +33,29 @@
                 android:layout_height="match_parent"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
-                android:text="@{person.name}"
+                android:text="@{actor.name}"
                 android:textColor="@color/alabaster"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/cardView"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="@tools:sample/full_names" />
 
+            <TextView
+                android:id="@+id/tvSubtitle"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:text="@{actor.character}"
+                android:textColor="@color/geyser"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/cardView"
+                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
+                tools:text="@tools:sample/full_names" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
 </layout>
