--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -11,7 +11,6 @@
         tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_homeFragment_to_searchFragment"
-            app:popUpTo="@id/homeFragment"
             app:destination="@id/searchFragment" />
     </fragment>
     <fragment
@@ -61,7 +60,6 @@
     </fragment>
     <action
         android:id="@+id/action_global_actorDetailsFragment"
-        app:popUpTo="@id/actorDetailsFragment"
         app:destination="@id/actorDetailsFragment" />
     <fragment
         android:id="@+id/episodeGroupDetailsFragment"
@@ -91,18 +89,13 @@
             app:argType="com.example.cinemates.domain.model.Media" />
         <action
             android:id="@+id/action_tvDetailsFragment_to_episodeGroupDetailsFragment"
-            app:popUpTo="@id/tvDetailsFragment"
             app:destination="@id/episodeGroupDetailsFragment" />
     </fragment>
     <action
         android:id="@+id/action_global_movieDetailsFragment"
-        app:popUpToInclusive="true"
-        app:popUpTo="@id/movieDetailsFragment"
         app:destination="@id/movieDetailsFragment" />
     <action
         android:id="@+id/action_global_tvDetailsFragment"
-        app:popUpToInclusive="true"
-        app:popUpTo="@id/tvDetailsFragment"
         app:destination="@id/tvDetailsFragment" />
     <dialog
         android:id="@+id/mediaImagesFragment"
@@ -115,7 +108,6 @@
     </dialog>
     <action
         android:id="@+id/action_global_mediaImagesFragment"
-        app:destination="@id/mediaImagesFragment"
-        app:popUpToInclusive="true"/>
+        app:destination="@id/mediaImagesFragment"/>
 
 </navigation>
