--- a/app/src/main/res/layout/layout_poster_text_rating.xml
+++ b/app/src/main/res/layout/layout_poster_text_rating.xml
@@ -7,6 +7,8 @@
         <variable
             name="vote"
             type="Double" />
+        <import type="android.view.View"/>
+
     </data>
 
     <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -33,6 +35,7 @@
                 android:textColor="@color/vermilion_100"
                 android:textSize="12sp"
                 android:textStyle="bold"
+                android:visibility="@{vote!=0.0 ? View.VISIBLE : View.GONE}"
                 app:voteAverage="@{vote}"
                 tools:text="7,0" />
 
