--- a/app/src/main/res/layout/fragment_movie_about.xml
+++ b/app/src/main/res/layout/fragment_movie_about.xml
@@ -66,38 +66,22 @@
                 android:layout_marginTop="10dp"
                 app:movie="@{movie}" />
 
-            <com.skydoves.transformationlayout.TransformationLayout
-                android:id="@+id/transformationLayout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/movie_info"
-                app:transformation_duration="550"
-                app:transformation_targetView="@+id/collection_content">
-
-                <include
-                    android:id="@+id/collection_cover"
-                    layout="@layout/layout_collection_cover"
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:layout_marginHorizontal="20dp"
-                    android:layout_marginTop="10dp"
-                    app:collection="@{movie.belongsToCollection}" />
-            </com.skydoves.transformationlayout.TransformationLayout>
 
             <include
-                android:id="@+id/collection_content"
-                layout="@layout/layout_collection_content"
+                android:id="@+id/collection_cover"
+                layout="@layout/layout_collection_cover"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:layout_centerInParent="true"
-                android:visibility="gone"
+                android:layout_height="200dp"
+                android:layout_below="@id/movie_info"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="10dp"
                 app:collection="@{movie.belongsToCollection}" />
 
             <TextView
                 android:id="@+id/trailer_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/transformationLayout"
+                android:layout_below="@id/collection_cover"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
                 android:text="Trailers"
