--- a/LinearLayoutInfo/src/main/res/values/attrs.xml
+++ b/LinearLayoutInfo/src/main/res/values/attrs.xml
@@ -4,5 +4,7 @@
         <attr name="title" format="string" />
         <attr name="value" format="string" />
         <attr name="hideIfValueEmpty" format="boolean" />
+        <attr name="textColor" format="color" />
+        <attr name="textSize" format="dimension" />
     </declare-styleable>
 </resources>
