--- a/app/src/main/res/layout/fragment_episode_group_details.xml
+++ b/app/src/main/res/layout/fragment_episode_group_details.xml
@@ -24,11 +24,12 @@
             app:navigationIcon="@drawable/ic_outline_arrow_back_24"
             app:title="@{episodeGroup.name}" />
 
-        <com.indisparte.linearlayoutinfo.LinearInfoView
+        <com.indisparte.linearlayoutinfo.LinearLayoutInfoView
             android:id="@+id/episode_group_description"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:orientation="vertical"
+            app:textColor="@color/alabaster"
             app:hideIfValueEmpty="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
