--- a/app/src/main/res/layout/fragment_movie_about.xml
+++ b/app/src/main/res/layout/fragment_movie_about.xml
@@ -37,24 +37,16 @@
                 app:trimMode="trimModeLength"
                 tools:text="@tools:sample/lorem/random" />
 
-            <TextView
-                android:id="@+id/textTitleGenres"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/readMoreTextV"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="20dp"
-                android:text="Genres"
-                android:textColor="@color/geyser"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-
             <com.indisparte.horizontalchipview.HorizontalChipView
                 android:id="@+id/chiGroupGenres"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/textTitleGenres"
-                android:padding="10dp" />
+                android:layout_below="@id/readMoreTextV"
+                android:padding="10dp"
+                app:titleColor="@color/alabaster"
+                app:titleSize="18sp"
+                app:titleStyle="bold"
+                app:title="Genres" />
 
             <include
                 android:id="@+id/movie_info"
