--- a/app/src/main/res/layout/fragment_tv_about.xml
+++ b/app/src/main/res/layout/fragment_tv_about.xml
@@ -46,24 +46,17 @@
                 app:trimMode="trimModeLength"
                 tools:text="@tools:sample/lorem/random" />
 
-            <TextView
-                android:id="@+id/textTitleGenres"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/readMoreTextV"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="20dp"
-                android:text="Genres"
-                android:textColor="@color/geyser"
-                android:textSize="14sp"
-                android:textStyle="bold" />
 
             <com.indisparte.horizontalchipview.HorizontalChipView
                 android:id="@+id/chipGroupGenres"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/textTitleGenres"
-                android:padding="10dp" />
+                android:layout_below="@id/readMoreTextV"
+                android:padding="10dp"
+                app:title="Genres"
+                app:titleColor="@color/alabaster"
+                app:titleSize="18sp"
+                app:titleStyle="bold" />
 
             <include
                 android:id="@+id/tv_info"
@@ -92,8 +85,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/episode_group_section"
-                android:orientation="horizontal"
                 android:layout_marginTop="10dp"
+                android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:listitem="@layout/list_item_episode_group" />
 
